# luce

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  CMakePresets.json  Doxyfile.in  MODULE.bazel  README.md  TODO.md  WORKSPACE.bazel  alter_args-inl.h  build.gradle.kts  conanfile.py  conanfile.txt  deps.vcxitems  deps.vcxitems.filters  init-inl.hpp  luce.props  luce.sln  luce.vcxproj  luce.vcxproj.filters  luce_build.props  main.cpp  settings.gradle.kts  vcpkg-configuration.json  vcpkg.json
assets/: replExpr.md
assets/isa/riscv32/: Instruction Categories.md
cmake/: dependencies.cmake  flags.cmake  folders.cmake  llvm.cmake  prelude.cmake  test.cmake
data/iota/: iota.S  iota.md  test.S  test.elf
demo/: BUILD.bazel  CMakeLists.txt  demo.cpp  demo.vcxproj  demo.vcxproj.filters  demo2.cpp  demo3.cpp  demo4.cpp  llvm_demo.cpp  luce_add_demo.bzl
driver/: BUILD.bazel  CMakeLists.txt  DllMain.cpp  driver.vcxproj  driver.vcxproj.filters  exec.hpp  luce_main.cpp  luce_pch.hh
driver/Support/: CMakeLists.txt
driver/Support/isa/: CMakeLists.txt  Disassembler.cpp  Disassembler.hpp  architecture.hpp  config.hpp
driver/Support/isa/riscv32/: Decoder.hpp  Register.cpp  Register.hpp  isa.hpp  riscv32.hpp
driver/include/isa/: architecture.hpp
driver/luce/: Argument.hpp  ArgumentLoader.hpp  Disassembler.hpp  Image.hpp  MainMemory.hpp  Monitor.hpp  Pattern.hpp  SystemBus.hpp  Task.hpp  Timer.hpp  config.hpp  cpu.hpp  replWatcher.hpp
driver/luce/Support/isa/: IDecoder.hpp  IDisassembler.hpp  IInstruction.hpp  Icpu.hpp  Word.hpp  architecture.hpp  host.hpp
driver/luce/Support/isa/constants/: riscv32.hpp  unused.hpp
driver/luce/Support/isa/riscv32/: Decoder.hpp  Disassembler.hpp  Factory.hpp  Instruction.hpp  Register.hpp  riscv32.hpp
driver/luce/Support/isa/riscv32/instruction/: Atomic.hpp  Base.hpp  Multiply.hpp  debunk_your_macro-inl.hpp  mixin.hpp
driver/luce/Support/isa/riscv32/instruction/details/: debunk_your_macro-inl.hpp  mixin.hpp
driver/luce/Support/utils/: Pattern.hpp  Timer.hpp
driver/luce/argument/: ArgumentLoader.hpp
driver/luce/cpu/: cpu.hpp  cpus.hpp  mmu.hpp
driver/luce/debugging/: Debugger.hpp  Lexer.hpp  Token.hpp
driver/luce/isa/: architecture.hpp  host.hpp
driver/luce/isa/riscv32/: isa.hpp  opcode.hpp
driver/luce/repl/: Debugger.hpp  ExprVisitor.hpp  IVisitor.hpp  Lexer.hpp  Parser.hpp  Token.hpp  evaluation.hpp  expression.hpp  interpreter.hpp  repl_fwd.hpp
driver/luce/utils/: Pattern.hpp  Timer.hpp
driver/src/: Argument.cpp  ArgumentLoader.cpp  Debugger.cpp  Disassembler.cpp  ExprVisitor.cpp  Lexer.cpp  MainMemory.cpp  Monitor.cpp  Parser.cpp  Task.cpp  cpu.cpp  expression.cpp  repl.cpp  replWatcher.cpp
driver/src/argument/: Argument.cpp  ArgumentLoader.cpp
driver/src/isa/riscv32/: Decoder.cpp  Disassembler.cpp  Instruction.cpp  Register.cpp
driver/src/isa/riscv32/instruction/: Atomic.cpp  Base.cpp  Multiply.cpp
driver/src/luce/: Argument.cpp  ArgumentLoader.cpp  Debugger.cpp  ExprVisitor.cpp  Factory.cpp  Instruction.cpp  Lexer.cpp  MainMemory.cpp  Monitor.cpp  Parser.cpp  Register.cpp  Task.cpp  cpu.cpp  expression.cpp  repl.cpp
driver/src/repl/: Debugger.cpp  ExprVisitor.cpp  Lexer.cpp  Parser.cpp  expression.cpp  repl.cpp
driver/unused/: Disassembler.hpp
examples/: helloworld.S  helloworld.elf  iota.S  iota.elf
include/: BUILD.bazel  deps.cc  deps.hh  fmt.hh  scn.hh  spdlog.hh  std.hh
luce/: driver.sln  driver.vcxproj  driver.vcxproj.filters  exec.hpp  luce_main.cpp
luce/include/: MainMemory.hpp  Task.hpp  config.hpp
luce/include/isa/: architecture.hpp
module/: fmt.ixx  std.ixx
platform/: BUILD.bazel
scripts/: copy_dlls.py
shared/: BUILD.bazel  alter_args-inl.h  init-inl.hpp
shared/include/accat/auxilia/: BUILD.bazel  Monostate.hpp  Property.hpp  Status.hpp  Variant.hpp  auxilia.hpp  auxilia.vcxitems  auxilia.vcxitems.filters  config.hpp  defines.hpp  file_reader.hpp  format.hpp  id.hpp  memory.hpp  random.hpp
shared/include/accat/auxilia/details/: Monostate.hpp  Property.hpp  Status.hpp  Variant.hpp  config.hpp  file_reader.hpp  format.hpp  id.hpp  includes-inl.hpp  macros.hpp  memory.hpp  random.hpp  variadic-inl.h  variadic.h
source/auxilia/: BUILD.bazel  CMakeLists.txt  auxilia.vcxitems  auxilia.vcxitems.filters
source/auxilia/include/accat/auxilia/: auxilia.hpp  auxilia.ixx  defines.hpp
source/auxilia/include/accat/auxilia/details/: Generator.hpp  Monostate.hpp  Property.hpp  Status.hpp  Variant.hpp  config.hpp  file_reader.hpp  format.hpp  id.hpp  includes-inl.hpp  macros.hpp  memory.hpp  random.hpp  variadic-inl.h  views.hpp
source/unused/: Disassembler.cpp  rocket.hpp
test/: BUILD.bazel  CMakeLists.txt  decoder.test.cpp  dummy.cpp  endian.test.cpp  endian_test.cpp  expr.test.cpp  luce_add_test.bzl  memory.load.test.cpp  memory_load_test.cpp  packages.config  test.vcxproj
toolchain/: BUILD.bazel  utils.bzl  windows_cc_toolchain_config.bzl
tools/: CMakeLists.txt
tools/assets/: assets.vcxitems
tools/luce/: BUILD.bazel  CMakeLists.txt  alter_args-inl.h  cpp.hint  init-inl.hpp  luce.vcxproj  luce.vcxproj.filters  luce_emulator.cpp  main.cpp
vcpkg/: README.md
vcpkg/ports/auxilia/: portfile.cmake  vcpkg.json
vcpkg/ports/scnlib/: portfile.cmake
vcpkg/triplets/: x64-windows.cmake
