"""
		main workspace file.
"""
workspace(name = "luce")

load("//third_party:third_party.bzl", "load_third_party_libraries")

load_third_party_libraries()

load("//third_party:transitive_dependencies.bzl", "load_transitive_dependencies")

load_transitive_dependencies()

register_toolchains(
    "//toolchain:Windows_MSVC",
)
