"""
	luce workspace file.
"""

workspace(name = "luce")

load("//bazel/third_party:third_party.bzl", "load_third_party_libraries")

load_third_party_libraries()

load("//bazel/third_party:transitive_dependencies.bzl", "load_transitive_dependencies")

load_transitive_dependencies()

register_toolchains(
    "//bazel/toolchain:Windows_MSVC",
)
