cc_binary(
    name = "demo",
    srcs = ["demo.cpp"],
    copts = [
        "/std:c++latest",
        "/Isource/auxilia/include",
        "/Zc:preprocessor",
        "/Iinclude",
        "/MDd", # Multi-threaded Debug DLL
    ],
    defines = [
        "AC_CPP_DEBUG",
        "SPDLOG_FMT_EXTERNAL",
    ],
    deps = [
        "//source/auxilia",
        "//include:external_deps",
        "@fmt",
        "@spdlog",
        "@capstone",
    ],
    visibility = ["//git:__pkg__"],
)
