driver_srcs = glob(["src/**/*.cpp"]) + ["luce_main.cpp"] + ["DllMain.cpp"]

driver_includes = [
    "include",
    "exec.hpp",
] + glob(["luce/**/*.hpp"]) + glob(["luce/**/*.h"])

cc_library(
    name = "driver",
    srcs = driver_srcs,
    copts = [
        "/std:c++latest",
        "/Isource/auxilia/include",  # MUST be added, relative to the WORKSPACE file
        "/Zc:preprocessor",
        "/Iinclude",
        "/Idriver",
        "/Zc:__cplusplus",
        "/MDd",
        "/wd4068",  # disable warning C4068: unknown pragma
    ],
    defines = [
        "AC_CPP_DEBUG",
        "SPDLOG_FMT_EXTERNAL",
        "FMT_SHARED",
        "SPDLOG_COMPILED_LIB",
        "_CRT_SECURE_NO_WARNINGS",
    ],
    includes = driver_includes,
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//include:external_deps",
        "//source/auxilia",
        "@argparse",
        "@fmt",
        "@spdlog",
    ],
)
