includes = glob(["*.hh"])

cc_library(
    name = "external_deps",
    srcs = includes,
    copts = [
        "/std:c++latest",
        "/Zc:preprocessor",
        "/Isource/auxilia/include",
        "/wd4068",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "SPDLOG_FMT_EXTERNAL",
        "FMT_SHARED",
        "SPDLOG_COMPILED_LIB",
        "_CRT_SECURE_NO_WARNINGS",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//source/auxilia",
        "@fmt",
        "@spdlog",
    ],
)
