# Copyright 2024 Original Authors. This (and files under the same directory)
# is a copy of the original files from the Official Bazel Examples repository
# and altered to fit the needs of this(loxo) project.


platform(
    name = "windows_x64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)
