# cc_library(
#     name = "utils",
#     srcs = glob(["include/accat/auxilia/**"]),
#     visibility = ["//visibility:public"],
#     linkstatic = True,
#     defines = [
#         "AC_CPP_DEBUG",
#     ],
#     copts = [
#         "/std:c++latest",
#         "/Iinclude",
#         "/Zc:preprocessor",
#     ],
#     deps = [
#         "@fmt",
#         "@spdlog",
#     ],
# )