cc_binary(
    name = "luce",
    srcs = ["luce_emulator.cpp"] + ["init-inl.hpp"] + ["alter_args-inl.h"],
    copts = [
        "/std:c++latest",
        "/Isource/auxilia/include",
        "/Zc:preprocessor",
        "/Iinclude",
        "/Zc:__cplusplus",
        "/wd4068",
    ],
    defines = [
        "AC_CPP_DEBUG",
        "SPDLOG_FMT_EXTERNAL",
        "FMT_SHARED",
        "SPDLOG_COMPILED_LIB",
        "_CRT_SECURE_NO_WARNINGS",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [
        "//driver",
        "//source/auxilia",
        "@fmt",
        "@spdlog",
    ],
)
